Make example dropdown button inline #48

--- a/public/index.html
+++ b/public/index.html
@@ -326,7 +326,7 @@
         <span class="col-10 col-md-8">
           Wikidata Tree Builder
           <!-- Example Dropdown -->
-          <div class="dropdown d-none d-sm-block" style="margin-left:50px;display:inline;">
+          <div class="dropdown d-none d-sm-inline" style="margin-left:50px;display:inline;">
             <a class="btn btn-sm btn-secondary dropdown-toggle text-center" href="#" role="button" id="dropdownMenuLink"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               examples
