Only show properties with "wikibase-item" datatype #47

--- a/public/index.html
+++ b/public/index.html
@@ -457,7 +457,7 @@
           <div class="form-group col-md-2 col-sm-6">
             <label for="type_select">Property</label>
             <input name="type" type="hidden" id="type_select_id" />
-            <input type="text" id="type_select" class="form-control type_select" placeholder="Please select property" value="" onblur="" onfocus="">
+            <input type="text" name="type_label" id="type_select" class="form-control type_select" placeholder="Please select property" value="" onblur="" onfocus="">
           </div>
 
           <div class="form-group col-md-2 col-sm-6">
