--- a/public/index.html
+++ b/public/index.html
@@ -487,6 +487,8 @@
               <div class="dropdown-menu dropdown-settings dropdown-menu-right" aria-labelledby="dropdownSettings">
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="birthname"
                     name="options[birthname]" />Birth name</a>
+                <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="burial"
+                                                                           name="options[burial]" />Burial info</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="socialmedia"
                     name="options[socialmedia]" />Social Media Links</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="education"
