--- a/public/index.html
+++ b/public/index.html
@@ -500,7 +500,7 @@
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="siblings"
                   name="options[siblings]" />Show Siblings</a>
                 <a class="dropdown-item" href="javascript:void(0);"><input type="checkbox" data-value="siblings"
-                   name="options[placeInsteadOfHopsital]" />Show birth city instead of hopsital</a>
+                   name="options[placeInsteadOfHopsital]" />Show birth city instead of hospital</a>
               </div>
             </div>
             <button type="submit" id="search-button" class="form-control btn btn-primary">Search</button>
